src/objects/Member_Preference__c.object
<CustomObject>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Member Preferences</relationshipLabel>
        <relationshipName>Member_Preferences</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preference__c</fullName>
        <label>Preference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Preference__c</fullName>
        <label>Selected Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email and Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProV1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TaylorMade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Callaway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smoking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Smoking</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Member Preference</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Member Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Preferences</pluralLabel>
    <recordTypes>
        <fullName>Appetizers</fullName>
        <active>true</active>
        <label>Appetizers</label>
    </recordTypes>
    <recordTypes>
        <fullName>Billing_Statement</fullName>
        <active>true</active>
        <label>Billing Statement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cocktail</fullName>
        <active>true</active>
        <label>Cocktail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dessert</fullName>
        <active>true</active>
        <label>Dessert</label>
    </recordTypes>
    <recordTypes>
        <fullName>Entree</fullName>
        <active>true</active>
        <label>Entree</label>
    </recordTypes>
    <recordTypes>
        <fullName>Golf_Ball</fullName>
        <active>true</active>
        <label>Golf Ball</label>
    </recordTypes>
    <recordTypes>
        <fullName>Meal</fullName>
        <active>true</active>
        <label>Meal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Payment</fullName>
        <active>true</active>
        <label>Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Seating</fullName>
        <active>true</active>
        <label>Seating</label>
    </recordTypes>
    <recordTypes>
        <fullName>Smoking</fullName>
        <active>true</active>
        <label>Smoking</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wine</fullName>
        <active>true</active>
        <label>Wine</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>